--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd src && nodemon server.ts"
+    "start": "cd src && nodemon server.ts",
+    "build": "npm i && tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +18,14 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "typescript": "^5.0.3"
-  },
-  "devDependencies": {
+    "typescript": "^5.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.1"
+  },
+  "devDependencies": {
+    
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
